Fix broken Linux build

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@
 /**/*.opendb
 /**/*.opensdf
 /**/*.vc.db
-/**/*ns.config.json
+/**/*ns.local.json
 /**/zlog.lock
 /**/log.config.ini
+/.vscode/**
 /build/**
 *.user
