--- a/bld/test/ut/libproxy/CMakeLists.txt
+++ b/bld/test/ut/libproxy/CMakeLists.txt
@@ -21,7 +21,7 @@ set(libproxy_ut_include
 
 if(WIN32)
 set(libproxy_ut_include ${libproxy_ut_include}
-	${_GETOPT_ROOT}
+	${_GETOPT_INC}
 )
 else()
 endif()
