Host and module changes     Implement ns serialization     Rework command line interface, add ad-hoc mode     Opt-in to use zlog library instead of xlogging

--- a/bld/CMakeLists.txt
+++ b/bld/CMakeLists.txt
@@ -125,6 +125,11 @@ else()
 	option(use_openssl "set use_openssl to OFF to use a different library (default is ON) ON")
 endif()
 
+	option(use_zlog "set use_zlog to ON to use zlog as logging library (default is OFF)" OFF)
+	if(NOT ${use_zlog})
+		add_definitions(-DNO_ZLOG)
+	endif()
+
 	option(leak_detection "set leak_detection to ON (default is OFF)" OFF)
 	if(${leak_detection})
 		add_definitions(-DLEAK_DETECT)
