--- a/bld/src/proxyd/CMakeLists.txt
+++ b/bld/src/proxyd/CMakeLists.txt
@@ -6,4 +6,7 @@
 #
 add_executable(proxyd ${_PROJECT_ROOT}/src/prx_main.c)
 
-target_link_libraries(proxyd libproxy libzlog)
+target_link_libraries(proxyd libproxy)
+if(${use_zlog})
+target_link_libraries(proxyd libzlog)
+endif()
