Update dependencies to latest ones. Fix connect is blocked with more than 5 proxies.

--- a/bld/src/proxyd/log.config
+++ b/bld/src/proxyd/log.config
@@ -1,12 +1,12 @@
-# 
-# See http://hardysimpson.github.io/zlog/UsersGuide-EN.html 
+#
+# See http://hardysimpson.github.io/zlog/UsersGuide-EN.html
 #
 [global]
 strict init=true
 buffer min=1024
 buffer max=0
 rotate lock file=zlog.lock
-default format="%d(%T).%ms [%t] %V %m%n" 
+default format="%d(%T).%ms [%t] %V %m%n"
 
 [formats]
 trace="[Pid=%p:Tid=%t %d(%T).%ms] %c %V %m%n"
@@ -15,5 +15,5 @@ error="%d(%T).%ms [%t] %V %m [%U:%L]%n"
 
 [rules]
 *.error "proxy.err" ;error
-# *.* "proxy.log",1M*3 ;trace
-*.!debug >stdout ;full
+# *.* "proxy.log",1M*3 ;full
+*.!debug >stdout ;trace
