--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "deps/uamqp"]
 	path = deps/uamqp
-	url = https://github.com/marcschier/azure-uamqp-c.git
+	url = https://github.com/Azure/azure-uamqp-c.git
 [submodule "deps/umqtt"]
 	path = deps/umqtt
 	url = https://github.com/marcschier/azure-umqtt-c.git
@@ -14,11 +14,9 @@
 [submodule "deps/ctest"]
 	path = deps/ctest
 	url = https://github.com/Azure/azure-ctest.git
-	branch = develop
 [submodule "deps/trunner"]
 	path = deps/trunner
 	url = https://github.com/Azure/azure-c-testrunnerswitcher.git
-	branch = develop
 [submodule "deps/parson"]
 	path = deps/parson
 	url = https://github.com/kgabis/parson.git
