--- a/bld/src/proxyd/log.config
+++ b/bld/src/proxyd/log.config
@@ -9,11 +9,14 @@ rotate lock file=zlog.lock
 default format="%d(%T).%ms [%t] %V %m%n"
 
 [formats]
-trace="[Pid=%p:Tid=%t %d(%T).%ms] %c %V %m%n"
+trace="[Tid=%t %d(%T).%ms] (%c) %m%n"
 full="[Pid=%p:Tid=%t %d(%T).%ms] %c %V %m [%U:%L]%n"
 error="%d(%T).%ms [%t] %V %m [%U:%L]%n"
 
 [rules]
-*.error "proxy.err" ;error
+# *.error "proxy.err" ;error
 # *.* "proxy.log",1M*3 ;full
-*.!debug >stdout ;trace
+# pal_ws.* >stdout ;trace
+# io_ws.* >stdout ;trace
+
+*.!debug >stdout
