Add build scripts to support continuous integration once public

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,21 @@
-﻿/api/**
+﻿/**/*.user
+/**/obj/**
+/**/.vs
+/**/bin/**
+/**/csx/**
+/**/packages/**
+/**/ecf/**
+/**/*.log
+/**/*.err
+/**/*.sdf
+/**/*.opendb
+/**/*.opensdf
+/**/*.vc.db
+/**/*ns.local.json
+/**/zlog.lock
+/**/log.config.ini
+/.vscode/**
+/build/**
+*.user
+/**/*.sln
+/**/*.vcx*
