--- a/bld/docker/Dockerfile
+++ b/bld/docker/Dockerfile
@@ -1,24 +1,28 @@
 FROM ubuntu:latest
 
-RUN set -ex && \
-    apt-get update && apt-get install -y \
-        curl \
-        build-essential \
-        libcurl4-openssl-dev \
-        git \
-        cmake \
-        libssl-dev \
-        valgrind \
-        libglib2.0-dev
-
 ENV PROXY_REPO https://github.com/Azure/iot-gateway-proxy
 ENV COMMIT_ID master
 
-ENTRYPOINT \
-    rm -rf /proxy && \
-    git clone ${PROXY_REPO} /proxy && \
-    git -C /proxy checkout ${COMMIT_ID} && \
-    git -C /proxy submodule update --init && \
-    chmod +x /proxy/bld/build.sh && \
-    /proxy/bld/build.sh --skip-unittests --use-zlog && \
-    bash
+RUN \
+		set -ex \
+	&& \
+		apt-get update && apt-get install -y \
+			apt-transport-https \
+			curl \
+			build-essential \
+			libcurl4-openssl-dev \
+			git \
+			cmake \
+			libssl-dev \
+			valgrind \
+			libglib2.0-dev \
+	&& \
+		sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ xenial main" > /etc/apt/sources.list.d/dotnetdev.list' \
+	&& \
+		apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893 \
+	&& \
+		apt-get update && apt-get install -y \
+			dotnet-dev-1.0.0-preview2.1-003177
+
+COPY docker-entrypoint.sh /
+ENTRYPOINT ["/docker-entrypoint.sh"]
