Signing changes and doc updates

--- a/bld/src/proxyd/log.config
+++ b/bld/src/proxyd/log.config
@@ -16,7 +16,8 @@ error="%d(%T).%ms [%t] %V %m [%U:%L]%n"
 [rules]
 # *.error "proxy.err" ;error
 # *.* "proxy.log",1M*3 ;full
-# pal_ws.* >stdout ;trace
-# io_ws.* >stdout ;trace
+
+#pal_ws.debug >stdout ;trace
+#io_ws.debug >stdout ;trace
 
 *.!debug >stdout
