--- a/api/csharp/samples/simple/project.json
+++ b/api/csharp/samples/simple/project.json
@@ -1,22 +1,35 @@
 {
-  "version": "1.0.0-*",
-  "buildOptions": {
-    "emitEntryPoint": true
-  },
-
-  "dependencies": {
-    "Microsoft.Azure.Devices.Proxy": "0.0.6-*"
-  },
-
-  "frameworks": {
-    "netcoreapp1.0": {
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "type": "platform",
-          "version": "1.0.0"
-        }
-      }
+    "version": "0.0.6-*",
+    "buildOptions": {
+        "emitEntryPoint": true
     },
-    "net46": {}
-  }
+    "dependencies": {
+        "Microsoft.Azure.Devices.Proxy": "0.0.6-*"
+    },
+    "frameworks": {
+        "netcoreapp1.0": {
+            "dependencies": {
+                "Microsoft.NETCore.App": {
+                    "type": "platform",
+                    "version": "1.0.0"
+                }
+            }
+        },
+        "netcoreapp1.1": {
+            "dependencies": {
+                "Microsoft.NETCore.App": {
+                    "type": "platform",
+                    "version": "1.1.0"
+                }
+            }
+        },
+        "net46": {}
+    },
+    "configurations": {
+        "Signed": {
+            "buildOptions": {
+                "define": [ "RELEASE_DELAY_SIGN" ]
+            }
+        }
+    }
 }
