--- a/api/csharp/src/Microsoft.Azure.Devices.Proxy/project.json
+++ b/api/csharp/src/Microsoft.Azure.Devices.Proxy/project.json
@@ -1,14 +1,14 @@
 {
   "version": "0.0.6-*",
   "name": "Microsoft.Azure.Devices.Proxy",
-  "title": "Test.Microsoft.Azure.Devices.Proxy",
-  "description": "API for Field Gateway Proxy Module",
-  "authors": [ "Microsoft" ],
+  "title": "Microsoft.Azure.Devices.Proxy API",
+  "description": "Field Gateway Proxy Module Service API",
+  "authors": [ "microsoft" ],
   "buildOptions": {
     "xmlDoc": false,
     "allowUnsafe": true,
-    "warningsAsErrors": false,
-    "publicSign": false,
+    "warningsAsErrors": true,
+    "nowarn": [ "1591", "1734" ],
     "define": [ "TRACE" ]
   },
   "packOptions": {
@@ -20,19 +20,18 @@
   },
   "dependencies": {
     "Microsoft.Azure.Relay": "0.1.4-preview",
-    "MsgPack.Cli": "0.9.0-beta1",
     "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
     "net46": {
       "dependencies": {
-        "WindowsAzure.ServiceBus": "3.4.3"
+        "WindowsAzure.ServiceBus": "3.4.5"
       }
     },
     "net45": {
       "dependencies": {
-        "WindowsAzure.ServiceBus": "3.4.3"
+        "WindowsAzure.ServiceBus": "3.4.5"
       }
     },
     "netstandard1.3": {
@@ -41,6 +40,19 @@
         "system.xml.xpath.xmldocument": "4.3.0",
         "System.Xml.XmlDocument": "4.3.0",
         "System.Reflection.TypeExtensions": "4.3.0"
+      }
+    }
+  },
+  "configurations": {
+    "Signed": {
+      "buildOptions": {
+        "define": [ "RELEASE_DELAY_SIGN" ],
+        "optimize": true
+      }
+    },
+    "Release": {
+      "buildOptions": {
+        "optimize": true
       }
     }
   }
