--- a/bld/src/libproxy/libproxy-shared.vcxitems.filters
+++ b/bld/src/libproxy/libproxy-shared.vcxitems.filters
@@ -203,6 +203,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\inc\prx_sched.h">
       <Filter>inc</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\inc\version.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\src\prx_err.c">
