--- a/bld/src/libiotsdk/CMakeLists.txt
+++ b/bld/src/libiotsdk/CMakeLists.txt
@@ -45,18 +45,9 @@ if(WIN32)
         ${_SHARED_ROOT}/adapters/threadapi_win32.c
         ${_SHARED_ROOT}/adapters/lock_win32.c
         ${_SHARED_ROOT}/adapters/httpapi_winhttp.c
+        ${_SHARED_ROOT}/src/tlsio_schannel.c
+        ${_SHARED_ROOT}/src/x509_schannel.c
     )
-    if(${use_openssl})
-        set(source_c_files ${source_c_files}
-            ${_SHARED_ROOT}/src/tlsio_openssl.c
-            ${_SHARED_ROOT}/src/x509_openssl.c
-        )
-    else()
-        set(source_c_files ${source_c_files}
-            ${_SHARED_ROOT}/src/tlsio_schannel.c
-            ${_SHARED_ROOT}/src/x509_schannel.c
-        )
-    endif()
 else()
     set(source_c_files ${source_c_files}
         ${_SHARED_ROOT}/adapters/httpapi_curl.c
@@ -64,17 +55,21 @@ else()
         ${_SHARED_ROOT}/adapters/threadapi_pthreads.c
         ${_SHARED_ROOT}/adapters/lock_pthreads.c
     )
-    if(${use_wolfssl})
-        set(source_c_files ${source_c_files}
-            ${_SHARED_ROOT}/src/tlsio_wolfssl.c
-        )
-    else()
+    if(NOT ${use_wolfssl})
         set(use_openssl 1)
-        set(source_c_files ${source_c_files}
-            ${_SHARED_ROOT}/src/tlsio_openssl.c
-            ${_SHARED_ROOT}/src/x509_openssl.c
-        )
     endif()
+endif()
+
+if(${use_lws} OR ${use_openssl})
+    set(use_openssl 1)
+	set(source_c_files ${source_c_files}
+		${_SHARED_ROOT}/src/tlsio_openssl.c
+		${_SHARED_ROOT}/src/x509_openssl.c
+	)
+elseif(${use_wolfssl})
+	set(source_c_files ${source_c_files}
+		${_SHARED_ROOT}/src/tlsio_wolfssl.c
+	)
 endif()
 
 #
@@ -99,6 +94,7 @@ if(${OPENSSL_FOUND})
 else()
     message(FATAL_ERROR, "No OpenSSL found, please install!")
 endif()
+	target_compile_definitions(libiotsdk PRIVATE USE_OPENSSL=1)
 elseif(${use_wolfssl})
     target_include_directories(libiotsdk PRIVATE $ENV(WOLFSSL_INCLUDE_DIR))
 endif()
