--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,23 +1,24 @@
 environment:
   matrix:
+    - proxy: no_zlog 
+      build_args: --skip-unittests --skip-dotnet 
+    - proxy: no_zlog_x64
+      build_args: -p x64 --skip-unittests --skip-dotnet 
+    - proxy: with_openssl
+      build_args: --skip-unittests --skip-dotnet --use-openssl
+    - proxy: with_openssl_x64
+      build_args: -p x64 --skip-unittests --skip-dotnet --use-openssl
+    - proxy: with_libwebsockets
+      build_args: --skip-unittests --skip-dotnet --use-libwebsockets
+    - proxy: with_libwebsockets_x64
+      build_args: -p x64 --skip-unittests --skip-dotnet --use-libwebsockets
     - proxy: default
       build_args: --use-zlog
     - proxy: default_x64
       build_args: -p x64 --use-zlog
-    - proxy: no_zlog 
-      build_args: --skip-dotnet 
-    - proxy: no_zlog_x64
-      build_args: -p x64 --skip-dotnet 
-    - proxy: with_openssl
-      build_args: --skip-dotnet --use-openssl
-    - proxy: with_openssl_x64
-      build_args: -p x64 --skip-dotnet --use-openssl
-    - proxy: with_libwebsockets
-      build_args: --skip-dotnet --use-libwebsockets
-    - proxy: with_libwebsockets_x64
-      build_args: -p x64 --skip-dotnet --use-libwebsockets
 image: Visual Studio 2015
 install:
+  - git submodule update --init
   - appveyor DownloadFile https://libwebsockets.org:444/Win32OpenSSL-1_0_2h.exe
   - Win32OpenSSL-1_0_2h.exe /silent /verysilent /sp- /suppressmsgboxes
 build:
