--- a/bld/CMakeLists.txt
+++ b/bld/CMakeLists.txt
@@ -66,11 +66,13 @@ endif()
 
 if (CMAKE_VERSION VERSION_LESS "3.1")
 	if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
-		set (CMAKE_C_FLAGS "--std=c99 ${CMAKE_C_FLAGS}")
-        set (CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
+          # Adding --std=c99 to CMAKE_C_FLAGS breaks compilation of several subprojects!
+          # e.g libwebsockets
+	  # set (CMAKE_C_FLAGS "--std=c99 ${CMAKE_C_FLAGS}")
+          set (CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
 	endif()
 else()
-	set (CMAKE_C_STANDARD 99)
+	#set (CMAKE_C_STANDARD 99)
     set (CMAKE_CXX_STANDARD 11)
 endif()
 
