os_mock.h includes time.h if it exists to avoid conflicting type definition
cmake checks existance of header file time.h.
If so, it defines the macro HAVE_TIME_H in test_config.h

Depending on macro HAVE_TIME_H os_mock.h include time.h to get definition
of clockid_t. Otherwise it defines the type on its own.

Signed-off-by: Juergen Kosel <juergen.kosel@softing.com>

--- a/bld/CMakeLists.txt
+++ b/bld/CMakeLists.txt
@@ -247,4 +247,10 @@ function(build_ut cur_test folder)
     endif()
 endfunction()
 
+# Check for header files which needs to be included, if they exist
+# to avoid conflicting type definitions.
+CHECK_INCLUDE_FILES (time.h HAVE_TIME_H)
+set (CMAKE_GENERATED_INC ${CMAKE_CURRENT_BINARY_DIR}/inc/)
+CONFIGURE_FILE(${_PROJECT_INC}/test_config.h.in ${CMAKE_GENERATED_INC}/test_config.h)
+
 add_subdirectory(test)
