Define CTEST_USE_STDINT if stdint.h exists
Several functions in deps/ctest/src/ctest.c are only implemented if
the macro CTEST_USE_STDINT is defined.
So linking of test/ut/pal/new__pal_ws_lws_ut.c would fail due to missing
symbols.
Therefore the macro is defined by cmake, if the header file stdint.h
exists.
Note: For Windows builds the macro is set in ctest.h


Signed-off-by: Juergen Kosel <juergen.kosel@softing.com>

--- a/bld/test/libtest/CMakeLists.txt
+++ b/bld/test/libtest/CMakeLists.txt
@@ -6,6 +6,15 @@
 # not want to pull in submodules for umock, etc.
 #
 
+if(WIN32)
+else()
+    check_include_file("stdint.h" HAVE_STDINT_H)
+    if(HAVE_STDINT_H)
+      # Define macro needed at least by deps/ctest/src/ctest.c
+        add_definitions(-DCTEST_USE_STDINT)
+    endif()
+endif()
+
 #
 # Source
 #
